feat: migrate legacy pages

--- a/legacy/about/index.html
+++ b/legacy/about/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BuildArt Global | About Us</title>
-    <link rel="stylesheet" href="/assets/css/main.css" />
-    <link rel="stylesheet" href="/assets/css/about.css" />
+    <link rel="stylesheet" href="/legacy/assets/css/main.css" />
+    <link rel="stylesheet" href="/legacy/assets/css/about.css" />
     <link
       href="https://api.fontshare.com/v2/css?f[]=manrope@200,300,400,500,600,700,800&display=swap"
       rel="stylesheet"
@@ -18,7 +18,7 @@
       rel="stylesheet"
       href="https://unpkg.com/splitting@1.0.6/dist/splitting.css"
     />
-    <link rel="icon" href="/assets/images/Build-art-global-logo-02-1.png" />
+    <link rel="icon" href="/legacy/assets/images/Build-art-global-logo-02-1.png" />
   </head>
   <body>
     <header class="header">
@@ -27,7 +27,7 @@
           <a href="/" class="header__logo">
             <img
               alt="BuildArt Global"
-              src="/assets/images/Build-art-global-logo-02-1.png"
+              src="/legacy/assets/images/Build-art-global-logo-02-1.png"
             />
           </a>
 
@@ -66,7 +66,7 @@
               </p>
             </div>
             <div class="about-hero__image">
-              <img src="/assets/images/image2.png" alt="BuildArt Global Work" />
+              <img src="/legacy/assets/images/image2.png" alt="BuildArt Global Work" />
             </div>
           </div>
         </div>
@@ -100,7 +100,7 @@
             </div>
 
             <div class="about-story__image">
-              <img src="/assets/images/image5.png" alt="BuildArt Global Work" />
+              <img src="/legacy/assets/images/image5.png" alt="BuildArt Global Work" />
             </div>
           </div>
         </div>
@@ -115,7 +115,7 @@
 
             <div class="about-defines__image">
               <img
-                src="/assets/images/image-20.jpg"
+                src="/legacy/assets/images/image-20.jpg"
                 alt="BuildArt Global Integration"
               />
             </div>
@@ -178,7 +178,7 @@
         </div>
 
         <div class="about-technical__image">
-          <img src="/assets/images/image-23.jpg" alt="Technical Capability" />
+          <img src="/legacy/assets/images/image-23.jpg" alt="Technical Capability" />
         </div>
       </section>
     </main>
@@ -188,7 +188,7 @@
         <div class="footer__grid">
           <div class="footer__logo">
             <img
-              src="/assets/images/Build-art-global-logo-02-1.png"
+              src="/legacy/assets/images/Build-art-global-logo-02-1.png"
               alt="BuildArt Global"
             />
           </div>
@@ -225,7 +225,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/splitting@1.0.6/dist/splitting.min.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/about.js"></script>
+    <script src="/legacy/assets/js/main.js"></script>
+    <script src="/legacy/assets/js/about.js"></script>
   </body>
 </html>
