--- a/legacy/index.html
+++ b/legacy/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BuildArt Global | Design & Build Excellence Across the UAE</title>
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/legacy/assets/css/main.css" />
     <link
       href="https://api.fontshare.com/v2/css?f[]=manrope@200,300,400,500,600,700,800&display=swap"
       rel="stylesheet"
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://unpkg.com/splitting@1.0.6/dist/splitting.css"
     />
-    <link rel="icon" href="/assets/images/Build-art-global-logo-02-1.png" />
+    <link rel="icon" href="/legacy/assets/images/Build-art-global-logo-02-1.png" />
   </head>
   <body>
     <header class="header">
@@ -25,7 +25,7 @@
         <div class="header__inner">
           <a href="/" class="header__logo">
             <img
-              src="/assets/images/Build-art-global-logo-02-1.png"
+              src="/legacy/assets/images/Build-art-global-logo-02-1.png"
               alt="BuildArt Global"
             />
           </a>
@@ -50,22 +50,22 @@
       <section class="hero">
         <div class="hero__background">
           <img
-            src="/assets/images/hero-slider-4.png"
+            src="/legacy/assets/images/hero-slider-4.png"
             alt="BuildArt Global Projects"
             class="hero__bg-slide active"
           />
           <img
-            src="/assets/images/hero-slider-2.png"
+            src="/legacy/assets/images/hero-slider-2.png"
             alt="BuildArt Global Projects"
             class="hero__bg-slide"
           />
           <img
-            src="/assets/images/hero-slider-3.png"
+            src="/legacy/assets/images/hero-slider-3.png"
             alt="BuildArt Global Projects"
             class="hero__bg-slide"
           />
           <img
-            src="/assets/images/hero-slider-1.png"
+            src="/legacy/assets/images/hero-slider-1.png"
             alt="BuildArt Global Projects"
             class="hero__bg-slide"
           />
@@ -137,21 +137,21 @@
 
             <div class="trust__image">
               <img
-                src="/assets/images/office-1.png"
+                src="/legacy/assets/images/office-1.png"
                 alt="BuildArt Global Project"
               />
             </div>
 
             <div class="trust__image">
               <img
-                src="/assets/images/image-34.jpg"
+                src="/legacy/assets/images/image-34.jpg"
                 alt="BuildArt Global Project"
               />
             </div>
 
             <div class="trust__image">
               <img
-                src="/assets/images/image-21.jpg"
+                src="/legacy/assets/images/image-21.jpg"
                 alt="BuildArt Global Project"
               />
             </div>
@@ -170,7 +170,7 @@
             <div class="service-card" data-service="1">
               <div class="service-card__bg">
                 <img
-                  src="/assets/images/exhibtion-1.png"
+                  src="/legacy/assets/images/exhibtion-1.png"
                   alt="Exhibition Stands"
                 />
               </div>
@@ -193,7 +193,7 @@
 
             <div class="service-card" data-service="2">
               <div class="service-card__bg">
-                <img src="/assets/images/office-2.png" alt="Office Fit-Out" />
+                <img src="/legacy/assets/images/office-2.png" alt="Office Fit-Out" />
               </div>
               <div class="container">
                 <div class="service-card__content">
@@ -214,7 +214,7 @@
 
             <div class="service-card" data-service="3">
               <div class="service-card__bg">
-                <img src="/assets/images/image-27.jpg" alt="Home Interiors" />
+                <img src="/legacy/assets/images/image-27.jpg" alt="Home Interiors" />
               </div>
               <div class="container">
                 <div class="service-card__content">
@@ -251,35 +251,35 @@
           <div class="persuasion__grid">
             <div class="persuasion__image persuasion__image--hero">
               <img
-                src="/assets/images/image-38.jpg"
+                src="/legacy/assets/images/image-38.jpg"
                 alt="BuildArt Global Project"
               />
             </div>
 
             <div class="persuasion__image">
               <img
-                src="/assets/images/image-34.jpg"
+                src="/legacy/assets/images/image-34.jpg"
                 alt="BuildArt Global Project"
               />
             </div>
 
             <div class="persuasion__image">
               <img
-                src="/assets/images/image-21.jpg"
+                src="/legacy/assets/images/image-21.jpg"
                 alt="BuildArt Global Project"
               />
             </div>
 
             <div class="persuasion__image">
               <img
-                src="/assets/images/image-16.jpg"
+                src="/legacy/assets/images/image-16.jpg"
                 alt="BuildArt Global Project"
               />
             </div>
 
             <div class="persuasion__image">
               <img
-                src="/assets/images/image-27.jpg"
+                src="/legacy/assets/images/image-27.jpg"
                 alt="BuildArt Global Project"
               />
             </div>
@@ -306,7 +306,7 @@
         <div class="process__cards">
           <div class="process__item process__item--1">
             <div class="process__image">
-              <img src="/assets/images/image-3.jpg" alt="Discovery & Vision" />
+              <img src="/legacy/assets/images/image-3.jpg" alt="Discovery & Vision" />
             </div>
             <div class="process__step">
               <div class="process__step-number">01</div>
@@ -326,14 +326,14 @@
               </p>
             </div>
             <div class="process__image">
-              <img src="/assets/images/image-10.jpg" alt="Design & Strategy" />
+              <img src="/legacy/assets/images/image-10.jpg" alt="Design & Strategy" />
             </div>
           </div>
 
           <div class="process__item process__item--3">
             <div class="process__image">
               <img
-                src="/assets/images/image-15.jpg"
+                src="/legacy/assets/images/image-15.jpg"
                 alt="Execution & Delivery"
               />
             </div>
@@ -356,7 +356,7 @@
             </div>
             <div class="process__image">
               <img
-                src="/assets/images/image-20.jpg"
+                src="/legacy/assets/images/image-20.jpg"
                 alt="Support & Follow-Through"
               />
             </div>
@@ -377,14 +377,14 @@
 
             <div class="social-proof__image social-proof__image--large">
               <img
-                src="/assets/images/image-19.jpg"
+                src="/legacy/assets/images/image-19.jpg"
                 alt="Exhibition Stand Project"
               />
             </div>
 
             <div class="social-proof__image social-proof__image--small">
               <img
-                src="/assets/images/image-16.jpg"
+                src="/legacy/assets/images/image-16.jpg"
                 alt="Office Fit-Out Project"
               />
               <div class="social-proof__testimonial">
@@ -398,17 +398,17 @@
 
             <div class="social-proof__image social-proof__image--small">
               <img
-                src="/assets/images/image-27.jpg"
+                src="/legacy/assets/images/image-27.jpg"
                 alt="Residential Interior"
               />
             </div>
 
             <div class="social-proof__image social-proof__image--small">
-              <img src="/assets/images/image-21.jpg" alt="Commercial Space" />
+              <img src="/legacy/assets/images/image-21.jpg" alt="Commercial Space" />
             </div>
 
             <div class="social-proof__image social-proof__image--small">
-              <img src="/assets/images/image-28.jpg" alt="Event Space" />
+              <img src="/legacy/assets/images/image-28.jpg" alt="Event Space" />
               <div class="social-proof__testimonial">
                 <p class="social-proof__quote">
                   "They delivered a functional, elegant office that reflects our
@@ -420,7 +420,7 @@
 
             <div class="social-proof__image social-proof__image--large">
               <img
-                src="/assets/images/image-23.jpg"
+                src="/legacy/assets/images/image-23.jpg"
                 alt="Exhibition Environment"
               />
             </div>
@@ -439,7 +439,7 @@
           <div class="final-cta__grid">
             <div class="final-cta__image">
               <img
-                src="/assets/images/image-32.jpg"
+                src="/legacy/assets/images/image-32.jpg"
                 alt="BuildArt Global Project"
               />
             </div>
@@ -471,7 +471,7 @@
         <div class="footer__grid">
           <div class="footer__logo">
             <img
-              src="/assets/images/Build-art-global-logo-02-1.png"
+              src="/legacy/assets/images/Build-art-global-logo-02-1.png"
               alt="BuildArt Global"
             />
           </div>
@@ -508,6 +508,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/splitting@1.0.6/dist/splitting.min.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/legacy/assets/js/main.js"></script>
   </body>
 </html>
