feat: Completed the about page

--- a/legacy/about/index.html
+++ b/legacy/about/index.html
@@ -11,20 +11,23 @@
       rel="stylesheet"
     />
     <link
-      href="https://api.fontshare.com/v2/css?f[]=boska@200,201,300,301,400,401,500,501,700,701,900,901&display=swap"
+      href="https://api.fontshare.com/v2/css?f[]=cabinet-grotesk@100,200,300,400,500,700,800,900&display=swap"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
       href="https://unpkg.com/splitting@1.0.6/dist/splitting.css"
     />
-    <link rel="icon" href="/legacy/assets/images/Build-art-global-logo-02-1.png" />
+    <link
+      rel="icon"
+      href="/legacy/assets/images/Build-art-global-logo-02-1.png"
+    />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="header__inner">
-          <a href="/" class="header__logo">
+          <a href="/legacy" class="header__logo">
             <img
               alt="BuildArt Global"
               src="/legacy/assets/images/Build-art-global-logo-02-1.png"
@@ -38,10 +41,10 @@
           </button>
 
           <nav class="header__nav">
-            <a href="/about">About</a>
-            <a href="/exhibitions">Exhibitions</a>
-            <a href="/office-fitout">Office Fit-Out</a>
-            <a href="/home-interiors">Home Interiors</a>
+            <a href="/legacy/about">About</a>
+            <a href="/legacy/exhibitions">Exhibitions</a>
+            <a href="/legacy/office-fitout">Office Fit-Out</a>
+            <a href="/legacy/home-interiors">Home Interiors</a>
           </nav>
         </div>
       </div>
@@ -66,7 +69,10 @@
               </p>
             </div>
             <div class="about-hero__image">
-              <img src="/legacy/assets/images/image2.png" alt="BuildArt Global Work" />
+              <img
+                src="/legacy/assets/images/image2.png"
+                alt="BuildArt Global Work"
+              />
             </div>
           </div>
         </div>
@@ -100,7 +106,10 @@
             </div>
 
             <div class="about-story__image">
-              <img src="/legacy/assets/images/image5.png" alt="BuildArt Global Work" />
+              <img
+                src="/legacy/assets/images/image5.png"
+                alt="BuildArt Global Work"
+              />
             </div>
           </div>
         </div>
@@ -123,12 +132,10 @@
             <div class="about-defines__content">
               <p>
                 What sets BuildArt Global apart is our ability to manage design,
-                build, and technical execution under one roof.
-              </p>
-              <p>
-                We don't separate creativity from engineering. We don't design
-                without considering buildability. And we don't treat electrical
-                or technology as an afterthought.
+                build, and technical execution under one roof. We don't separate
+                creativity from engineering. We don't design without considering
+                buildability. And we don't treat electrical or technology as an
+                afterthought.
               </p>
               <p>
                 By integrating architecture, structure, electrical planning,
@@ -170,15 +177,212 @@
               <li>Audio-visual and digital display integration</li>
               <li>Technical coordination with venues and authorities</li>
             </ul>
-
-            <div class="about-technical__closing">
-              <p>Operationally reliable and fully compliant.</p>
-            </div>
           </div>
         </div>
 
         <div class="about-technical__image">
-          <img src="/legacy/assets/images/image-23.jpg" alt="Technical Capability" />
+          <img
+            src="/legacy/assets/images/image-23.jpg"
+            alt="Technical Capability"
+          />
+        </div>
+      </section>
+
+      <section class="about-process">
+        <h2 class="about-process__headline">
+          A Structured Process. No Surprises.
+        </h2>
+
+        <div class="about-process__cards">
+          <div class="about-process__item about-process__item--1">
+            <div class="about-process__image">
+              <img
+                src="/legacy/assets/images/image-22.jpg"
+                alt="Discovery & Alignment"
+              />
+            </div>
+            <div class="about-process__step">
+              <div class="about-process__step-number">01</div>
+              <h3 class="about-process__step-title">Discovery & Alignment</h3>
+              <p class="about-process__step-description">
+                We understand your objectives, constraints, timelines, and
+                technical requirements.
+              </p>
+            </div>
+          </div>
+
+          <div class="about-process__item about-process__item--2">
+            <div class="about-process__step">
+              <div class="about-process__step-number">02</div>
+              <h3 class="about-process__step-title">Design & Planning</h3>
+              <p class="about-process__step-description">
+                Concepts, layouts, and visualizations developed with technical
+                feasibility in mind.
+              </p>
+            </div>
+            <div class="about-process__image">
+              <img
+                src="/legacy/assets/images/image-26.jpg"
+                alt="Design & Planning"
+              />
+            </div>
+          </div>
+
+          <div class="about-process__item about-process__item--3">
+            <div class="about-process__image">
+              <img
+                src="/legacy/assets/images/image-27.jpg"
+                alt="Technical Coordination"
+              />
+            </div>
+            <div class="about-process__step">
+              <div class="about-process__step-number">03</div>
+              <h3 class="about-process__step-title">
+                Technical Coordination & Approvals
+              </h3>
+              <p class="about-process__step-description">
+                Electrical layouts, drawings, submissions, and compliance
+                handled early.
+              </p>
+            </div>
+          </div>
+
+          <div class="about-process__item about-process__item--4">
+            <div class="about-process__step">
+              <div class="about-process__step-number">04</div>
+              <h3 class="about-process__step-title">Build & Execution</h3>
+              <p class="about-process__step-description">
+                Production, installation, and quality control managed by
+                experienced teams.
+              </p>
+            </div>
+            <div class="about-process__image">
+              <img
+                src="/legacy/assets/images/image-29.jpg"
+                alt="Build & Execution"
+              />
+            </div>
+          </div>
+
+          <div class="about-process__item about-process__item--5">
+            <div class="about-process__image">
+              <img
+                src="/legacy/assets/images/image-30.jpg"
+                alt="Delivery & Handover"
+              />
+            </div>
+            <div class="about-process__step">
+              <div class="about-process__step-number">05</div>
+              <h3 class="about-process__step-title">Delivery & Handover</h3>
+              <p class="about-process__step-description">
+                Projects delivered complete, tested, and ready for use.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <a href="/contact" class="about-process__cta">Start Your Project →</a>
+      </section>
+
+      <section class="about-trust">
+        <div class="container">
+          <div class="about-trust__grid">
+            <h2 class="about-trust__headline">
+              Trust is built through delivery.
+            </h2>
+
+            <div class="about-trust__content">
+              <div class="about-trust__intro">
+                <p>Clients choose BuildArt Global because we:</p>
+              </div>
+
+              <ul class="about-trust__points">
+                <li>1. Take full responsibility from concept to completion</li>
+                <li>
+                  2. Understand UAE regulations, venues, and authority processes
+                </li>
+                <li>3. Integrate design, build, and technical execution</li>
+                <li>4. Communicate clearly and realistically</li>
+                <li>5. Deliver what we commit to — on time</li>
+              </ul>
+
+              <div class="about-trust__closing">
+                <p>We don't overpromise.</p>
+                <p>We plan thoroughly.</p>
+                <p>And we execute with discipline.</p>
+              </div>
+            </div>
+
+            <div class="about-trust__image">
+              <img
+                src="/legacy/assets/images/image6.png"
+                alt="BuildArt Global Delivery"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="about-philosophy">
+        <div class="container">
+          <div class="about-philosophy__grid">
+            <div class="about-philosophy__label">Our Philosophy</div>
+
+            <h2 class="about-philosophy__headline">
+              Focused.<br />
+              Collaborative.<br />
+              Accountable.
+            </h2>
+
+            <div class="about-philosophy__content">
+              <p>
+                We believe successful projects are built through collaboration,
+                honesty, and execution discipline. Every decision we make — from
+                design choices to technical planning — is guided by one
+                question: Will this perform as expected in the real world? That
+                mindset defines how we work and why our clients continue to
+                trust us.
+              </p>
+            </div>
+
+            <div class="about-philosophy__image">
+              <img
+                src="/legacy/assets/images/image-35.jpg"
+                alt="BuildArt Global Philosophy"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="final-cta">
+        <div class="container">
+          <div class="final-cta__grid">
+            <div class="final-cta__image">
+              <img
+                src="/legacy/assets/images/image-32.jpg"
+                alt="BuildArt Global Project"
+              />
+            </div>
+
+            <div class="final-cta__content">
+              <h2 class="final-cta__headline">
+                Ready to Transform<br />Your Space?
+              </h2>
+
+              <p class="final-cta__subheadline">
+                Tell us your project goals and we'll guide you with clarity and
+                confidence.
+              </p>
+
+              <div class="final-cta__buttons">
+                <a href="/contact" class="btn btn--primary">Start a Project</a>
+                <a href="/contact?quote=true" class="btn btn--secondary"
+                  >Request a Quote</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -225,7 +429,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/splitting@1.0.6/dist/splitting.min.js"></script>
-    <script src="/legacy/assets/js/main.js"></script>
+    <script src="/legacy/assets/js/utils.js"></script>
     <script src="/legacy/assets/js/about.js"></script>
   </body>
 </html>
