--- a/legacy/index.html
+++ b/legacy/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,20 +10,23 @@
       rel="stylesheet"
     />
     <link
-      href="https://api.fontshare.com/v2/css?f[]=boska@200,201,300,301,400,401,500,501,700,701,900,901&display=swap"
+      href="https://api.fontshare.com/v2/css?f[]=cabinet-grotesk@100,200,300,400,500,700,800,900&display=swap"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
       href="https://unpkg.com/splitting@1.0.6/dist/splitting.css"
     />
-    <link rel="icon" href="/legacy/assets/images/Build-art-global-logo-02-1.png" />
+    <link
+      rel="icon"
+      href="/legacy/assets/images/Build-art-global-logo-02-1.png"
+    />
   </head>
   <body>
     <header class="header">
       <div class="container">
         <div class="header__inner">
-          <a href="/" class="header__logo">
+          <a href="/legacy" class="header__logo">
             <img
               src="/legacy/assets/images/Build-art-global-logo-02-1.png"
               alt="BuildArt Global"
@@ -37,10 +40,10 @@
           </button>
 
           <nav class="header__nav">
-            <a href="/about">About</a>
-            <a href="/exhibitions">Exhibitions</a>
-            <a href="/office-fitout">Office Fit-Out</a>
-            <a href="/home-interiors">Home Interiors</a>
+            <a href="/legacy/about">About</a>
+            <a href="/legacy/exhibitions">Exhibitions</a>
+            <a href="/legacy/office-fitout">Office Fit-Out</a>
+            <a href="/legacy/home-interiors">Home Interiors</a>
           </nav>
         </div>
       </div>
@@ -193,7 +196,10 @@
 
             <div class="service-card" data-service="2">
               <div class="service-card__bg">
-                <img src="/legacy/assets/images/office-2.png" alt="Office Fit-Out" />
+                <img
+                  src="/legacy/assets/images/office-2.png"
+                  alt="Office Fit-Out"
+                />
               </div>
               <div class="container">
                 <div class="service-card__content">
@@ -214,7 +220,10 @@
 
             <div class="service-card" data-service="3">
               <div class="service-card__bg">
-                <img src="/legacy/assets/images/image-27.jpg" alt="Home Interiors" />
+                <img
+                  src="/legacy/assets/images/image-27.jpg"
+                  alt="Home Interiors"
+                />
               </div>
               <div class="container">
                 <div class="service-card__content">
@@ -306,7 +315,10 @@
         <div class="process__cards">
           <div class="process__item process__item--1">
             <div class="process__image">
-              <img src="/legacy/assets/images/image-3.jpg" alt="Discovery & Vision" />
+              <img
+                src="/legacy/assets/images/image-3.jpg"
+                alt="Discovery & Vision"
+              />
             </div>
             <div class="process__step">
               <div class="process__step-number">01</div>
@@ -326,7 +338,10 @@
               </p>
             </div>
             <div class="process__image">
-              <img src="/legacy/assets/images/image-10.jpg" alt="Design & Strategy" />
+              <img
+                src="/legacy/assets/images/image-10.jpg"
+                alt="Design & Strategy"
+              />
             </div>
           </div>
 
@@ -404,7 +419,10 @@
             </div>
 
             <div class="social-proof__image social-proof__image--small">
-              <img src="/legacy/assets/images/image-21.jpg" alt="Commercial Space" />
+              <img
+                src="/legacy/assets/images/image-21.jpg"
+                alt="Commercial Space"
+              />
             </div>
 
             <div class="social-proof__image social-proof__image--small">
@@ -508,6 +526,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/splitting@1.0.6/dist/splitting.min.js"></script>
-    <script src="/legacy/assets/js/main.js"></script>
+    <script src="/legacy/assets/js/utils.js"></script>
+    <script src="/legacy/assets/js/home.js"></script>
   </body>
 </html>
