Feat: Fixed the navbar and about page not home page bugs

--- a/legacy/about/index.html
+++ b/legacy/about/index.html
@@ -34,13 +34,13 @@
             />
           </a>
 
-          <button class="header__menu-toggle" aria-label="Toggle menu">
+          <button class="about__header header__menu-toggle" aria-label="Toggle menu">
             <span></span>
             <span></span>
             <span></span>
           </button>
 
-          <nav class="header__nav">
+          <nav class="about__header header__nav">
             <a href="/legacy/about">About</a>
             <a href="/legacy/exhibitions">Exhibitions</a>
             <a href="/legacy/office-fitout">Office Fit-Out</a>
